# LibLapin

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BOITE_A_IDEE  CERCLE_COCENTRIQUE  CHANGELOG.md  CMakeLists.txt  Doxyfile  LIBLAPIN_V2  LICENSE  MAJ  Makefile  TODO  b++  bcc  build_package.sh  bunny_deps  doc_sql.html  doc_sql2.html  generate_doc.php  install.sh  layout.xml  liblapin.cbp  liblapin.depend  license.txt  package.sh  readme.md  school_install.sh  school_uninstall.sh
ressources/sfMod/: CMakeLists.txt  Changelog.txt  Readme.txt
sfMidi/: CMakeLists.txt  Changelog.txt
sfMidi/include/: sfMidi.h
sfMidi/test/: Readme.txt
src/: CMakeLists.txt  color_configuration.cpp  draw_tilemap.cpp  parsing.cpp  placement.cpp  placement_configuration.cpp
src/allocator/: CMakeLists.txt  calloc.cpp  free.cpp  get_node.cpp  malloc.cpp  realloc.cpp  set_memory_check.cpp
src/asynclock/: CMakeLists.txt  asynclock.cpp  delete_trap.cpp  delta_time.cpp  get_current_time.cpp  get_time.cpp  new_trap.cpp  reset_clock.cpp  sleep.cpp
src/backtasks/: push_task.cpp
src/camera/: CMakeLists.txt  capture.cpp  capture_get_size.cpp  capture_new_picture.cpp  capture_new_pixelarray.cpp  capture_to_picture.cpp  capture_to_pixelarray.cpp  delete_camera.cpp  delete_capture.cpp  haarcascade_frontalface_alt.xml  headtrack.cpp  new_camera.cpp  new_capture.cpp  stabilize.cpp
src/cinematic/: cinematic.cpp  command.cpp  delete_cinematic.cpp  draw.cpp  load_cinematic.cpp  read_cinematic.cpp  reset.cpp  stop.cpp
src/collide/: CMakeLists.txt  circle.cpp  clip.cpp  collide.cpp  collision.cpp  configuration.cpp  draw_collision_shape.cpp  move_collision.cpp  pixel_collision.cpp  quad.cpp  rectangular.cpp  triangle.cpp  turn_collision.cpp
src/configuration/: CMakeLists.txt  bindf.cpp  casesf.cpp  childrenf.cpp  clean_raw_data.cpp  clear.cpp  create_mode.cpp  data.cpp  declarativef.cpp  delete_configuration.cpp  delete_node.cpp  execute.cpp  flexible_load.cpp  get_address.cpp  get_case.cpp  get_case_named.cpp  get_child.cpp  get_good_conf.cpp  get_name.cpp  get_nbr_case.cpp  get_nbr_child.cpp  get_node.cpp  get_parent.cpp  get_root.cpp  get_value.cpp  getf.cpp  go_get.cpp  go_set.cpp  handle_directive.cpp  is_last.cpp  is_type.cpp  iterator.cpp  linkf.cpp  load_configuration.cpp  merge.cpp  new_configuration.cpp  parsing.cpp  pop_path.cpp  push_path.cpp  read_configuration.cpp  (+15 more)
src/container/: CMakeLists.txt  bitfield.cpp  foreach.cpp  list.cpp  map.cpp  pool.cpp  queue.cpp  stack.cpp  string_map.cpp  vector.cpp
src/context/: CMakeLists.txt  box.cpp  context.cpp  depth.cpp  dressing.cpp  loading.cpp  normal.frag  pentacle.cpp  splash_screen.cpp  subcontext.cpp
src/database/: CMakeLists.txt  delete_database.cpp  new_database.cpp
src/error/: CMakeLists.txt  descriptor.cpp  error_descriptor.cpp  perror.cpp  set_log_filter.cpp  set_log_mode.cpp  strerror.cpp
src/events/: CMakeLists.txt  event_convert.cpp  get_context.cpp  get_delay.cpp  get_frequency.cpp  get_joy_axis.cpp  get_joy_button.cpp  get_joy_info.cpp  get_keyboard.cpp  get_mouse_button.cpp  get_mouse_position.cpp  get_window.cpp  globals.cpp  joystick_vibration.cpp  loop.cpp  loop_mw.cpp  network_event.cpp  set_async_computation.cpp  set_close_response.cpp  set_connect_response.cpp  set_context.cpp  set_display_function.cpp  set_event_response.cpp  set_get_focus_response.cpp  set_joy_axis_minimum_offset.cpp  set_joystick_threshold.cpp  set_key_response.cpp  set_loop_main_function.cpp  set_lost_focus_response.cpp  set_message_response.cpp  set_response.cpp  set_to_scheduler.cpp  update_joysticks.cpp
src/graph/: delete_graph.cpp  dump.cpp  get_node.cpp  load_graph.cpp  read_graph.cpp
src/graphics/: CMakeLists.txt  blit.cpp  clear.cpp  delete_clipable.cpp  delete_shader.cpp  display.cpp  draw.cpp  enable_full_blit.cpp  fill.cpp  forge_pixelarray.cpp  get_maximum_picture_width.cpp  load_picture.cpp  load_pixelarray.cpp  load_shader.cpp  make_clipable_unique.cpp  method.cpp  new_picture.cpp  new_pixelarray.cpp  new_shader.cpp  opengl.cpp  read_picture.cpp  read_pixelarray.cpp  save_picture.cpp  save_pixelarray.cpp  scale_clipable.cpp  set_additional_blit.cpp  set_alpha_blit.cpp  set_circle.cpp  set_clipable_attribute.cpp  set_geometry.cpp  set_line.cpp  set_multiply_blit.cpp  set_pixel.cpp  set_polygon.cpp  set_zpolygon.cpp  shader_set_variable.cpp  vectfont.cpp
src/hardware/: CMakeLists.txt  delete_hardware.cpp  delete_max7219.cpp  delete_vm110n.cpp  hardware_read.cpp  hardware_write.cpp  max7219_luminosity.cpp  max7219_pixels.cpp  max7219_status.cpp  new_bitstream.cpp  new_hardware.cpp  new_max7219.cpp  new_vvm110n.cpp  pop_bitstream.cpp  push_bitstream.cpp  rpi.cpp  top_bitstream.cpp  vm110n_read.cpp  vm110n_write.cpp
src/hash/: CMakeLists.txt  hash.cpp  wide_hash.cpp
src/history/: CMakeLists.txt  add_event.cpp  add_frame.cpp  add_key_frame.cpp  clear.cpp  clear_before.cpp  compare.cpp  compute.cpp  count_events.cpp  delete_event_history.cpp  delete_historic_element.cpp  delete_history.cpp  dump.cpp  erase_after.cpp  erase_before.cpp  erase_frame.cpp  get_events.cpp  get_frame.cpp  last_status.cpp  new_event_history.cpp  new_historic_element.cpp  new_history.cpp  read_event_history.cpp  rewind.cpp  save_event_history.cpp
src/misc/: CMakeLists.txt  base64.cpp  clamp.cpp  color.cpp  consistancy.cpp  create_box.cpp  delete_file.cpp  dprintf.cpp  error_descriptor.cpp  evaluate.cpp  file_exists.cpp  get_good_conf.cpp  globals.cpp  is_directory.cpp  join_binary_directory.cpp  levels.cpp  load_box.cpp  load_file.cpp  make_file_unique.cpp  managed_ressource.cpp  memdup.cpp  memswap.cpp  randomize.cpp  rclamp.cpp  reach.cpp  read_box.cpp  read_until_it_is_full.cpp  save_file.cpp  search_string_couple.cpp  self_test.cpp  shuffle.cpp  skip_box.cpp  sleep.cpp  smooth_move.cpp  snprintf.cpp  split.cpp  stick.cpp  strcasecmp.cpp  strndup.cpp  strnlen.cpp  (+2 more)
src/monitor/: CMakeLists.txt  add.cpp  display.cpp  prepare.cpp  print.cpp  remove.cpp  reset.cpp  store.cpp
src/network/: CMakeLists.txt  client_packet_ready.cpp  client_poll.cpp  (+21 more)
(+2509 files in other folders)
